--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,7 @@ main {
 
 main {
   @apply bg-[#ffffff08] 
-           border-1 border-[#ffffff0d]
+           border border-[#ffffff0d]
            shadow-[0_4px_20px_#00000066]
            backdrop-blur-[10px]
            rounded-2xl;
@@ -79,27 +79,4 @@ a {
 
 a:hover {
   @apply text-shadow-[0_0_5px] text-shadow-accent;
-}
-
-.projects > article {
-  @apply flex-centralize flex-col lg:flex-row w-full space-x-5 bg-block justify-start
-         border-1 border-[#ffffff0d]
-         shadow-[0_0px_15px_#312e81]
-         transition duration-300 ease-in-out
-         rounded-2xl overflow-hidden;
-}
-
-.projects > article:hover {
-  @apply transform-[scale(1.02)] shadow-[0_0px_25px_#6366f1];
-}
-
-.projects > article > img {
-  @apply border-none xl:border-r-1 border-[#ffffff0d] m-0 h-60 sm:h-50 inline-flex w-full sm:w-auto;
-}
-
-.projects > article > div {
-  @apply w-full flex-col py-2 px-4;
-}
-.projects > article > div > p:nth-of-type(2) {
-  @apply text-secondary-text text-balance;
 }
